--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
   </head>
   <body>
     <h1 class="text-center mt-5 display-4 text-primary">Welcome to my Projects</h1>
-    <h1 class="text-center mt-5 display-4 text-primary">Git Hub Pages</h1>
+    <h1 class="text-center mt-5 display-4 text-primary">Napoleón Sáenz</h1>
+    <h2 class="text-center mt-5 display-4 text-primary">Barista Luna</h2>
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
