--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>Napoleón Sáenz</title>
   </head>
   <body>
-    <h1 class="text-center mt-5 display-4 text-primary">Welcome to my Projects</h1>
+    <h1 class="text-center mt-5 display-4 text-primary">Welcome to my Prooooojects</h1>
     <h1 class="text-center mt-5 display-4 text-primary">Napoleón Sáenz</h1>
     <h2 class="text-center mt-5 display-4 text-primary">Barista Luna</h2>
     <!-- Optional JavaScript; choose one of the two! -->
