--- a/index.html
+++ b/index.html
@@ -45,10 +45,9 @@
       </nav><!-- .nav-menu -->
 
       <div class="social-links">
-      
-        <a href="https://napoleonsnz.github.io/" target="_blank" class="github"><i class="icofont-github"></i></a>
-        <a href="https://www.instagram.com/" target="_blank" class="instagram"><i class="icofont-instagram"></i></a>
+        <a href="https://api.whatsapp.com/send?phone=50371398377" target="_blank" class="whatsapp"><i class="icofont-whatsapp"></i></a>
         <a href="https://www.linkedin.com/in/napoleonsaenz" target="_blank" class="linkedin"><i class="icofont-linkedin"></i></a>
+                <a href="https://napoleonsnz.github.io/" target="_blank" class="github"><i class="icofont-github"></i></a>
       </div>
 
     </div>
@@ -61,7 +60,7 @@
     <div class="about-me container">
 
       <div class="section-title">
-        <h2>Más de mí</h2>
+        <h2>Esto es...</h2>
         <p>Mas sobre mí</p>
       </div>
       
