--- a/portfolio-details2.html
+++ b/portfolio-details2.html
@@ -24,7 +24,7 @@
   <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
   <link href="assets/vendor/venobox/venobox.css" rel="stylesheet">
 
-  <!-- Template Main CSS File -->
+  <!-- Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
 
 
@@ -41,23 +41,23 @@
         <div class="row">
 
           <div class="col-lg-8">
-            <h2 class="portfolio-title">Pagina web baristaluna.com</h2>
+            <h2 class="portfolio-title">Pagina web de Estudio de Arte Corporal</h2>
             <div class="owl-carousel portfolio-details-carousel">
-              <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
-              <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
-              <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/blackrose.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/blackrose2.jpg" class="img-fluid" alt="">
             </div>
           </div>
 
           <div class="col-lg-4 portfolio-info">
-            <h3>www.baristaluna.com</h3>
+            <h3>www.blackroseartstudio.com</h3>
             <ul>
-              <li><strong>Categoría</strong>: Informativa y de Comercio</li>
-              <li><strong>Página URL</strong>: <a href="https://napoleonsnz.github.io/baristaluna.com/">www.baristaluna.com</a></li>
+              <li><strong>Cliente:</strong>: Black Rose Art Studio</li>
+              <li><strong>Página URL</strong>: <a href="https://napoleonsnz.github.io/blackroseartstudio.com/">www.blackroseartstudio.com</a></li>
             </ul>
 
             <p>
-              Página web dinámica, creada con javascript css y html, contiene un formulario con PHP el cual manda los mensajes al correo electronico establecido.
+              Página creada con javascript, css, html y bootstrap, contiene un galerías de imagenes, direccionamiento para Whatsapp para hacer citas, y mapa de google para ver ubicación de Tienda, etc.
             </p>
           </div>
 
