--- a/portfolio-details1.html
+++ b/portfolio-details1.html
@@ -53,7 +53,7 @@
             <h3>www.baristaluna.com</h3>
             <ul>
               <li><strong>Cliente</strong>: Barista Luna</li>
-              <li><strong>Página URL</strong>: <a href="https://napoleonsnz.github.io/baristaluna.com/">www.baristaluna.com</a></li>
+              <li><strong>Página URL</strong>: <a href="https://napoleonsnz.github.io/baristaluna.com/" target="_blank">www.baristaluna.com</a></li>
             </ul>
 
             <p>
@@ -70,7 +70,7 @@
 
   <div class="credits">
 
-   di<a href=""></a>
+   <a href=""></a>
   </div>
 
   <!-- Vendor JS Files -->
