--- a/portfolio-details2.html
+++ b/portfolio-details2.html
@@ -53,7 +53,7 @@
             <h3>www.blackroseartstudio.com</h3>
             <ul>
               <li><strong>Cliente:</strong>: Black Rose Art Studio</li>
-              <li><strong>Página URL</strong>: <a href="https://napoleonsnz.github.io/blackroseartstudio.com/">www.blackroseartstudio.com</a></li>
+              <li><strong>Página URL</strong>: <a href="https://napoleonsnz.github.io/blackroseartstudio.com/" target="_blank">www.blackroseartstudio.com</a></li>
             </ul>
 
             <p>
@@ -70,7 +70,7 @@
 
   <div class="credits">
 
-   di<a href=""></a>
+   <a href=""></a>
   </div>
 
   <!-- Vendor JS Files -->
