--- a/portfolio-details3.html
+++ b/portfolio-details3.html
@@ -53,7 +53,7 @@
             <h3>www.delitoproletario.com</h3>
             <ul>
               <li><strong>Cliente</strong>: Mauricio Gonzalez</li>
-              <li><strong>Página URL</strong>: <a href="https://napoleonsnz.github.io/delitoproletario.com/">www.delitoproletario.com</a></li>
+              <li><strong>Página URL</strong>: <a href="https://napoleonsnz.github.io/delitoproletario.com/" target="_blank">www.delitoproletario.com</a></li>
             </ul>
 
             <p>
@@ -70,7 +70,7 @@
 
   <div class="credits">
 
-   di<a href=""></a>
+   <a href=""></a>
   </div>
 
   <!-- Vendor JS Files -->
@@ -84,7 +84,7 @@
   <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
   <script src="assets/vendor/venobox/venobox.min.js"></script>
 
-  <!-- Template Main JS File -->
+  <!--  JS File -->
   <script src="assets/js/main.js"></script>
 
 </body>
