--- a/portfolio-details2.html
+++ b/portfolio-details2.html
@@ -57,7 +57,7 @@
             </ul>
 
             <p>
-              Página creada con javascript, css, html y bootstrap, contiene un galerías de imagenes, direccionamiento para Whatsapp para hacer citas, y mapa de google para ver ubicación de Tienda, etc.
+              Página Web Responsiva creada con javascript, css, html y bootstrap, contiene un galerías de imagenes, direccionamiento para Whatsapp para hacer citas, y mapa de google para ver ubicación de Tienda, etc.
             </p>
           </div>
 
