--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
   <link href="assets/img/favicon.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Grenze+Gotisch:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Grenze+Gotisch:wght@900&display=swap" rel="stylesheet">
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="assets/vendor/icofont/icofont.min.css" rel="stylesheet">
@@ -75,9 +78,9 @@
             <p>
                <ul>
                 
-                <li><i class="icofont-code"></i> HTML - CSS - JAVASCRIPT - BOOTSTRAP - PHP</li>
-                <li><i class="icofont-code"></i> JAVA EE - JSP - SERVLETS - HIBERNATE</li>
-                <li><i class="icofont-code"></i> C# ASP.NET CORE ENTITY  </li>
+                <li><i class="icofont-code"></i> HTML - CSS - JS - BOOTSTRAP - REACT JS</li>
+                <!-- <li><i class="icofont-code"></i> </li>  -->
+                <li><i class="icofont-code"></i> C# ASP.NET ENTITY F. </li>
                 <li><i class="icofont-code"></i> MSSQL SERVER, MYSQL</li>
                 <li><i class="icofont-code"></i> SCRUM - GIT</li>
                 
