--- a/index.html
+++ b/index.html
@@ -78,10 +78,11 @@
             <p>
                <ul>
                 
-                <li><i class="icofont-code"></i> HTML - CSS - JS - BOOTSTRAP - REACT JS</li>
-                <!-- <li><i class="icofont-code"></i> </li>  -->
-                <li><i class="icofont-code"></i> C# ASP.NET ENTITY F. </li>
-                <li><i class="icofont-code"></i> MSSQL SERVER, MYSQL</li>
+                <li><i class="icofont-code"></i>HTML - CSS - JAVASCRIPT - PHP - BOOTSTRAP</li>
+                <li><i class="icofont-code"></i>REACT JS </li> 
+                <li><i class="icofont-code"></i>JAVA EE - JSP - SERVLETS - HIBERNATE</li> 
+                <li><i class="icofont-code"></i> C# - ASP.NET - ENTITY FRAMEWORK </li>
+                <li><i class="icofont-code"></i> MSSQL SERVER - MYSQL</li>
                 <li><i class="icofont-code"></i> SCRUM - GIT</li>
                 
               </ul>
