--- a/index.html
+++ b/index.html
@@ -92,9 +92,9 @@
           <div class="row">
             <div class="col-lg-6">
               <ul>
-                <li><i class="icofont-rounded-right"></i> <strong>CV/Portafolio:</strong>   https://napoleonsnz.github.io/</li>
-                <li><i class="icofont-rounded-right"></i> <strong>Teléfono:</strong> +503 7139 8377</li>
+                <li><i class="icofont-rounded-right"></i> <strong>Github:</strong>   https://github.com/NapoleonSNZ</li>
                 <li><i class="icofont-rounded-right"></i> <strong>DUI:</strong> 03509938-5</li>
+                <li><i class="icofont-rounded-right"></i> <strong>NIT:</strong> 0614-251285-112-7</li>
                 <li><i class="icofont-rounded-right"></i> <strong>Residencia:</strong> Santa Tecla, El Salvador</li>
               </ul>
             </div>
@@ -103,7 +103,6 @@
                 <li><i class="icofont-rounded-right"></i> <strong>Email:</strong> napoleonsaenz85@gmail.com</li>
                 <li><i class="icofont-rounded-right"></i> <strong>Idiomas:</strong> Español, Ingles Intermedio</li>
                 <li><i class="icofont-rounded-right"></i> <strong>Nacimiento:</strong> 25 Dic 1985</li>
-                <li><i class="icofont-rounded-right"></i> <strong>Freelance:</strong> Disponible</li>
               </ul>
             </div>
           </div>
@@ -181,6 +180,7 @@
             </ul>
             </p>
           </div>
+
         </div>
       </div>
 
@@ -191,7 +191,7 @@
 
   <!-- ======= Portfolio Section ======= -->
   <section id="portfolio" class="portfolio">
-    <div class="container">
+    <div class="container" data-aos="fade-up">
 
       <div class="section-title">
         <h2>Portafolio</h2>
@@ -199,14 +199,13 @@
       </div>
 
       <div class="row">
-
-        <div class="col-lg-12 d-flex justify-content-center">
-          <!-- <ul id="portfolio-flters">
-            <li data-filter="*" class="filter-active">Todo</li>
-            <li data-filter=".filter-app">Paginas Web</li>
-            <li data-filter=".filter-card">Sistemas Web</li>
-            <li data-filter=".filter-web">APP</li>
-          </ul>-->
+   <div class="col-lg-12 d-flex justify-content-center" data-aos="fade-up" data-aos-delay="100">
+            <ul id="portfolio-flters">
+              <li data-filter="*" class="filter-active">All</li>
+              <li data-filter=".filter-app">PAGINAS WEB</li>
+              <li data-filter=".filter-card">JAVA APP WEB</li>
+              <li data-filter=".filter-web">PROYECTOS REACT</li>
+            </ul>
         </div>
       </div>
 
@@ -225,7 +224,7 @@
           </div>
         </div>
 
-        <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+        <div class="col-lg-4 col-md-6 portfolio-item filter-app">
           <div class="portfolio-wrap">
             <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
@@ -251,6 +250,18 @@
           </div>
         </div>
 
+        <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
+            <div class="portfolio-info">
+             <h4><a href="http://napoleonsnz.github.io/blackroseartstudio.com/" target="_blank">IR A WEB</a></h4>
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/portfolio-2.jpg" data-gall="portfolioGallery" class="venobox" title="Web 3"><i class="bx bx-plus"></i></a>
+                <a href="portfolio-details2.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
 
     </div>
