--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
 
       <div class="section-title">
         <h2>Portafolio</h2>
-        <p>Páginas Webs</p>
+        <p>Portafolio</p>
       </div>
 
       <div class="row">
