--- a/index.html
+++ b/index.html
@@ -77,14 +77,13 @@
             Técnico en Ingeniería de Sistemas Informáticos y cursando el 5to. año en Ingeniería en Desarrollo de Software. Programador Analista para Sistema SIDCO en Productos Alimenticios DIANA. Me apasiona la tecnología, ser autodidacta, y tengo mucha disposición de aprender cosas nuevas cada día.</p>
             <p>
                <ul>
-                
-                <li><i class="icofont-code"></i>HTML - CSS - JAVASCRIPT - PHP - BOOTSTRAP</li>
-                <li><i class="icofont-code"></i>REACT JS </li> 
+                <li><i class="icofont-code"></i>HTML - CSS - JAVASCRIPT - PHP </li>
                 <li><i class="icofont-code"></i>JAVA EE - JSP - SERVLETS - HIBERNATE</li> 
                 <li><i class="icofont-code"></i> C# - ASP.NET - ENTITY FRAMEWORK </li>
+                <li><i class="icofont-code"></i>REACT JS - BOOTSTRAP </li> 
                 <li><i class="icofont-code"></i> MSSQL SERVER - MYSQL</li>
                 <li><i class="icofont-code"></i> SCRUM - GIT</li>
-                
+                <li><i class="icofont-code"></i> </li> 
               </ul>
             </p>
             <hr class="style1">
