--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                <ul>
                 <li><i class="icofont-code"></i>HTML - CSS - JAVASCRIPT - PHP </li>
                 <li><i class="icofont-code"></i>JAVA EE - JSP - SERVLETS - HIBERNATE</li> 
-                <li><i class="icofont-code"></i> C# - ASP.NET - ENTITY FRAMEWORK </li>
+                <li><i class="icofont-code"></i>C# - ASP.NET - ENTITY FRAMEWORK </li>
                 <li><i class="icofont-code"></i>REACT JS - BOOTSTRAP </li> 
                 <li><i class="icofont-code"></i> MSSQL SERVER - MYSQL</li>
                 <li><i class="icofont-code"></i> SCRUM - GIT</li>
@@ -193,7 +193,7 @@
     <div class="container" data-aos="fade-up">
 
       <div class="section-title">
-        <h2>Portafolio</h2>
+        <h2>Páginas web, Proyectos y más</h2>
         <p>Portafolio</p>
       </div>
 
