--- a/index.html
+++ b/index.html
@@ -45,21 +45,21 @@
           <li><a href="#portfolio">Portafolio</a></li>
           <li><a href="#contact">Contactame</a></li>
         </ul>
-      </nav><!-- .nav-menu -->
+      </nav>
 
       <div class="social-links">
         <a href="https://api.whatsapp.com/send?phone=50371398377" target="_blank" class="whatsapp"><i class="icofont-whatsapp"></i></a>
         <a href="https://www.linkedin.com/in/napoleonsaenz" target="_blank" class="linkedin"><i class="icofont-linkedin"></i></a>
-                <a href="https://napoleonsnz.github.io/" target="_blank" class="github"><i class="icofont-github"></i></a>
+                <a href="https://github.com/NapoleonSNZ" target="_blank" class="github"><i class="icofont-github"></i></a>
       </div>
 
     </div>
-  </header><!-- End Header -->
+  </header><!-- Fin Header -->
 
-  <!-- ======= About Section ======= -->
+  <!-- ======= Acerca de.. ======= -->
   <section id="about" class="about">
 
-    <!-- ======= About Me ======= -->
+    <!-- ======= Mas de mi======= -->
     <div class="about-me container">
 
       <div class="section-title">
@@ -107,10 +107,10 @@
           </div>
         </div>
       </div>
-    </div><!-- End About Me -->
-  </section><!-- End About Section -->
+    </div><!-- FIN MAs de mi -->
+  </section><!-- Fin Acerca de ..-->
 
-  <!-- ======= Resume Section ======= -->
+  <!-- ======= CV SECTION======= -->
   <section id="resume" class="resume">
     <div class="container">
 
@@ -184,11 +184,11 @@
       </div>
 
     </div>
-  </section><!-- End Resume Section -->
+  </section><!-- Fin CV -->
 
   
 
-  <!-- ======= Portfolio Section ======= -->
+  <!-- ======= Portafolio  ======= -->
   <section id="portfolio" class="portfolio">
     <div class="container" data-aos="fade-up">
 
@@ -217,7 +217,7 @@
               <h4><a href="https://napoleonsnz.github.io/baristaluna.com/" target="_blank">IR A WEB</a></h4>
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/portfolio-1.jpg" data-gall="portfolioGallery" class="venobox" title="App 1"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details1.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                <a href="detalleProyecto1.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
@@ -230,7 +230,7 @@
              <h4><a href="http://napoleonsnz.github.io/blackroseartstudio.com/" target="_blank">IR A WEB</a></h4>
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/portfolio-2.jpg" data-gall="portfolioGallery" class="venobox" title="Web 3"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details2.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                <a href="detalleProyecto2.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
@@ -243,7 +243,7 @@
              <h4><a href="https://napoleonsnz.github.io/delitoproletario.com/" target="_blank">IR A WEB</a></h4>
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/portfolio-3.jpg" data-gall="portfolioGallery" class="venobox" title="App 2"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details3.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                <a href="detalleProyecto3.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
@@ -256,7 +256,7 @@
              <h4><a href="https://github.com/NapoleonSNZ/JAVA_JSP_SERVLETS--CRUD" target="_blank">IR A CODIGO</a></h4>
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/portfolio-4.jpg" data-gall="portfolioGallery" class="venobox" title="Web 3"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details4.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                <a href="detalleProyecto4.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
@@ -269,7 +269,7 @@
              <h4><a href="https://napoleonsnz.github.io/download-movies/" target="_blank">IR A CODIGO</a></h4>
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/portfolio-5.jpg" data-gall="portfolioGallery" class="venobox" title="App 2"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details5.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                <a href="detalleProyecto5.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
@@ -277,9 +277,9 @@
 
       </div>
     </div>
-  </section><!-- End Portfolio Section -->
+  </section><!-- Fin Portfolio  -->
 
-  <!-- ======= Contact Section ======= -->
+  <!-- ======= Contacto======= -->
   <section id="contact" class="contact">
     <div class="container">
 
@@ -355,7 +355,7 @@
       </form>
 
     </div>
-  </section><!-- End Contact Section -->
+  </section><!-- Final Contacto  -->
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/jquery/jquery.min.js"></script>
