--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 </head>
 
 <body>
+
   <!-- ======= Header ======= -->
   <header id="header" class="header-tops">
     <div class="container">
@@ -371,6 +372,13 @@
   <!--JS File -->
   <script src="assets/js/main.js"></script>
 
+    <div class="background-container">
+        <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/1231630/moon2.png" alt="">
+    
+      <div class="stars"></div>
+      <div class="twinkling"></div>
+        <div class="clouds"></div>
+    </div>
 </body>
 
 </html>
