--- a/index.html
+++ b/index.html
@@ -1,29 +1,385 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+<head>
+  <meta charset="utf-8">
+  <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>Napoleón Sáenz</title>
-  </head>
-  <body>
-    <h1 class="text-center mt-5 display-4 text-primary">Welcome to my Projects</h1>
-    <h1 class="text-center mt-5 display-4 text-primary">Napoleón Sáenz</h1>
-    <h2 class="text-center mt-5 display-4 text-primary">Barista Luna</h2>
-    <!-- Optional JavaScript; choose one of the two! -->
+  <title>::Napoleón Sáenz::</title>
 
-    <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+  <meta content="" name="description">
+  <meta content="" name="keywords">
+  <!-- Favicons -->
+  <link href="assets/img/favicon.png" rel="icon">
+  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Grenze+Gotisch:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Grenze+Gotisch:wght@900&display=swap" rel="stylesheet">
+  <!-- Vendor CSS Files -->
+  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="assets/vendor/icofont/icofont.min.css" rel="stylesheet">
+  <link href="assets/vendor/remixicon/remixicon.css" rel="stylesheet">
+  <link href="assets/vendor/owl.carousel/assets/owl.carousel.min.css" rel="stylesheet">
+  <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
+  <link href="assets/vendor/venobox/venobox.css" rel="stylesheet">
+  <!--CSS File -->
+  <link href="assets/css/style.css" rel="stylesheet">
+</head>
 
-    <!-- Option 2: jQuery, Popper.js, and Bootstrap JS
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
-    -->
-  </body>
+<body>
+
+  <!-- ======= Header ======= -->
+  <header id="header" class="header-tops">
+    <div class="container">
+ 
+      <h1><a href="index.html">Napoleón Sáenz</a></h1>
+      <!-- <a href="index.html" class="mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a> -->
+      <h2>Hola, soy <span>Desarrollador Web</span> </h2>
+
+      <nav class="nav-menu d-none d-lg-block">
+        <ul>
+          <li class="active"><a href="#header">Inicio</a></li>
+          <li><a href="#about">Más de mí</a></li>
+          <li><a href="#resume">C.V.</a></li>
+          <li><a href="#portfolio">Portafolio</a></li>
+          <li><a href="#contact">Contactame</a></li>
+        </ul>
+      </nav>
+
+      <div class="social-links">
+        <a href="https://api.whatsapp.com/send?phone=50371398377" target="_blank" class="whatsapp"><i class="icofont-whatsapp"></i></a>
+        <a href="https://www.linkedin.com/in/napoleonsaenz" target="_blank" class="linkedin"><i class="icofont-linkedin"></i></a>
+                <a href="https://github.com/NapoleonSNZ" target="_blank" class="github"><i class="icofont-github"></i></a>
+      </div>
+
+    </div>
+  </header><!-- Fin Header -->
+
+  <!-- ======= Acerca de.. ======= -->
+  <section id="about" class="about">
+
+    <!-- ======= Mas de mi======= -->
+    <div class="about-me container">
+
+      <div class="section-title">
+        <h2>Esto es...</h2>
+        <p>Mas sobre mí</p>
+      </div>
+      
+      <div class="row">
+        <div class="col-lg-4" data-aos="fade-right">
+          <img src="assets/img/me.png" class="img-fluid" alt="">
+        </div>
+        <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
+          <h3>Desarrollador Web</h3>
+          <p class="font-italic">
+            Técnico en Ingeniería de Sistemas Informáticos y cursando el 5to. año en Ingeniería en Desarrollo de Software. Programador Analista para Sistema SIDCO en Productos Alimenticios DIANA. Me apasiona la tecnología, ser autodidacta, y tengo mucha disposición de aprender cosas nuevas cada día.</p>
+            <p>
+               <ul>
+                <li><i class="icofont-code"></i>HTML - CSS- BOOTSTRAP - JS - PHP </li>
+                <li><i class="icofont-code"></i>JAVA WEB - JSP - SERVLETS - HIBERNATE</li> 
+                <li><i class="icofont-code"></i>C# - ASP.NET - ENTITY FRAMEWORK </li>
+                <li><i class="icofont-code"></i>REACT JS </li> 
+                <li><i class="icofont-code"></i> SQL SERVER - MYSQL</li>
+                <li><i class="icofont-code"></i> SCRUM - GIT</li>
+                <li><i class="icofont-code"></i> </li> 
+              </ul>
+            </p>
+            <hr class="style1">
+            <br>
+          <div class="row">
+            <div class="col-lg-6">
+              <ul>
+                <li><i class="icofont-rounded-right"></i> <strong>Github:</strong>   https://github.com/NapoleonSNZ</li>
+                <li><i class="icofont-rounded-right"></i> <strong>DUI:</strong> 03509938-5</li>
+                <li><i class="icofont-rounded-right"></i> <strong>NIT:</strong> 0614-251285-112-7</li>
+                <li><i class="icofont-rounded-right"></i> <strong>Residencia:</strong> Santa Tecla, El Salvador</li>
+              </ul>
+            </div>
+            <div class="col-lg-6">
+              <ul>
+                <li><i class="icofont-rounded-right"></i> <strong>Email:</strong> napoleonsaenz85@gmail.com</li>
+                <li><i class="icofont-rounded-right"></i> <strong>Idiomas:</strong> Español, Ingles Intermedio</li>
+                <li><i class="icofont-rounded-right"></i> <strong>Nacimiento:</strong> 25 Dic 1985</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div><!-- FIN MAs de mi -->
+  </section><!-- Fin Acerca de ..-->
+
+  <!-- ======= CV SECTION======= -->
+  <section id="resume" class="resume">
+    <div class="container">
+
+      <div class="section-title">
+        <h2>Curriculum Vitae</h2>
+        <p>C. V.</p>
+      </div>
+
+      <div class="row">
+        <div class="col-lg-6">
+          <h3 class="resume-title">Educacion</h3>
+          <div class="resume-item">
+            <h4>Técnico en Ingeniería de Sistemas Informáticos.</h4>
+            <h5>2015 - 2017</h5>
+            <p><em>Escuela Especializada en Ingeniería ITCA-FEPADE, Santa Tecla</em></p>
+            <p></p>
+          </div>
+          <div class="resume-item">
+            <h4>Ingeniería en Desarrollo de Software</h4>
+            <h5>2018 - Actualmente 5to Año</h5>
+            <p><em>Escuela Especializada en Ingeniería ITCA-FEPADE, Santa Tecla</em></p>
+            <p></p>
+          </div>
+          <div class="resume-item">
+            <h4>Especialización Desarrollo en Software Arquitectónico: .NET/ .NET CORE C#  </h4>
+            <h5>Nov-Dic 2021</h5>
+            <p><em>INSAFORP-FORMÁS-FEDISAL</em></p>
+            <p></p>
+          </div>
+        </div>
+        <div class="col-lg-6">
+          <h3 class="resume-title">Experiencia</h3>
+          <div class="resume-item">
+            <h4>Programador Analista</h4>
+            <h5>Ene 2022 - Actualmente</h5>
+            <p><em>DATASOFT S.A. DE C.V. </em></p>
+            <p>
+            <ul>
+              <li>Mantenimiento y Desarrollo de Sistema Web Sidco en Productos Alimenticios DIANA, en sus distintas Distribuidoras en Guatemala, Honduras y Nicaragua.</li>
+              <li>Analista SQL.</li>
+              <li>Atención de requerimientos sobre fallas o modificaciones en portal Sidco y bases de datos en ambientes de prueba, desarrollo o producción.</li>
+            </ul>
+            </p>
+          </div>
+          <div class="resume-item">
+            <h4>Analista de Soporte TI</h4>
+            <h5>Feb - Oct 2021</h5>
+            <p><em>GRUPO SEGA EL SALVADOR</em></p>
+            <p><em>(Outsourcing Banco Agrícola, Davivienda)</em></p>
+            <p>
+            <ul>
+              <li>Soporte SQL de aplicación helpdesk, para diagnosticar y resolver incidencias.</li>
+              <li>Implementación de nuevas aplicaciones o sistemas operativos, desplegados remotamente desde SCCM, mediante ejecución y creación de Scripts.</li>
+              <li>Instalar y configurar las tecnologías empleadas por el banco, como los equipos informáticos, sistemas operativos, programas y aplicaciones.</li>
+            </ul>
+            </p>
+          </div>
+          <div class="resume-item">
+            <h4>Soporte Tecnico</h4>
+            <h5>2017 - 2020</h5>
+            <p><em>CLINICA CORAZON DE MARIA</em></p>
+            <p>
+            <ul>
+              <li>Realizar diagnósticos del malfuncionamiento del hardware y el software y encontrar soluciones de falla e implementarlas; además de brindar asistencia a los empleados en materia tecnológica.</li>
+              <li>Mantenimiento preventivo y correctivo de equipos. </li>
+            </ul>
+            </p>
+          </div>
+
+        </div>
+      </div>
+
+    </div>
+  </section><!-- Fin CV -->
+
+  
+
+  <!-- ======= Portafolio  ======= -->
+  <section id="portfolio" class="portfolio">
+    <div class="container" data-aos="fade-up">
+
+      <div class="section-title">
+        <h2>Páginas web, Proyectos y más</h2>
+        <p>Portafolio</p>
+      </div>
+
+      <div class="row">
+   <div class="col-lg-12 d-flex justify-content-center" data-aos="fade-up" data-aos-delay="100">
+            <ul id="portfolio-flters">
+              <li data-filter="*" class="filter-active">All</li>
+              <li data-filter=".filter-app">PAGINAS WEB</li>
+              <li data-filter=".filter-card">JAVA APP WEB</li>
+              <li data-filter=".filter-web">PROYECTOS REACT</li>
+            </ul>
+        </div>
+      </div>
+
+      <div class="row portfolio-container">
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4><a href="https://napoleonsnz.github.io/baristaluna.com/" target="_blank">IR A WEB</a></h4>
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/portfolio-1.jpg" data-gall="portfolioGallery" class="venobox" title="App 1"><i class="bx bx-plus"></i></a>
+                <a href="detalleProyecto1.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
+            <div class="portfolio-info">
+             <h4><a href="http://napoleonsnz.github.io/blackroseartstudio.com/" target="_blank">IR A WEB</a></h4>
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/portfolio-2.jpg" data-gall="portfolioGallery" class="venobox" title="Web 3"><i class="bx bx-plus"></i></a>
+                <a href="detalleProyecto2.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="">
+            <div class="portfolio-info">
+             <h4><a href="https://napoleonsnz.github.io/delitoproletario.com/" target="_blank">IR A WEB</a></h4>
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/portfolio-3.jpg" data-gall="portfolioGallery" class="venobox" title="App 2"><i class="bx bx-plus"></i></a>
+                <a href="detalleProyecto3.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/portfolio-4.jpg" class="img-fluid" alt="">
+            <div class="portfolio-info">
+             <h4><a href="https://github.com/NapoleonSNZ/JAVA_JSP_SERVLETS--CRUD" target="_blank">IR A CODIGO</a></h4>
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/portfolio-4.jpg" data-gall="portfolioGallery" class="venobox" title="Web 3"><i class="bx bx-plus"></i></a>
+                <a href="detalleProyecto4.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/portfolio-5.jpg" class="img-fluid" alt="">
+            <div class="portfolio-info">
+             <h4><a href="https://napoleonsnz.github.io/download-movies/" target="_blank">IR A CODIGO</a></h4>
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/portfolio-5.jpg" data-gall="portfolioGallery" class="venobox" title="App 2"><i class="bx bx-plus"></i></a>
+                <a href="detalleProyecto5.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+      </div>
+    </div>
+  </section><!-- Fin Portfolio  -->
+
+  <!-- ======= Contacto======= -->
+  <section id="contact" class="contact">
+    <div class="container">
+
+      <div class="section-title">
+        <h2>text me</h2>
+        <p>Contactame</p>
+      </div>
+
+      <div class="row mt-2">
+
+        <div class="col-md-6 d-flex align-items-stretch">
+          <div class="info-box">
+            <i class="bx bx-map"></i>
+            <h3>Whatsapp</h3>
+            <p><a href="https://api.whatsapp.com/send?phone=50371398377" target="_blank">Enviame un mensaje </a></p>
+          </div>
+        </div>
+
+        <div class="col-md-6 mt-4 mt-md-0 d-flex align-items-stretch">
+          <div class="info-box">
+            <i class="bx bx-share-alt"></i>
+            <h3>Social</h3>
+            <div class="social-links">
+              <a href="https://www.linkedin.com/in/napoleonsaenz" target="_blank" class="linkedin"><i class="icofont-linkedin"></i></a>
+              <a href="https://napoleonsnz.github.io/" target="_blank" class="github"><i class="icofont-github"></i></a>
+              <a href="https://www.instagram.com/" target="_blank" class="instagram"><i class="icofont-instagram"></i></a>
+
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-6 mt-4 d-flex align-items-stretch">
+          <div class="info-box">
+            <i class="bx bx-envelope"></i>
+            <h3>Email</h3>
+            <p>napoleonsaenz85@gmail.com</p>
+          </div>
+        </div>
+        <div class="col-md-6 mt-4 d-flex align-items-stretch">
+          <div class="info-box">
+            <i class="bx bx-phone-call"></i>
+            <h3>Llamada</h3>
+            <a href="tel:71398377" target="_blank">+503 7139 8377</a>
+          </div>
+        </div>
+      </div>
+
+      <form action="forms/contact.php" method="post" role="form" class="php-email-form mt-4">
+        <div class="form-row">
+          <div class="col-md-6 form-group">
+            <input type="text" name="name" class="form-control" id="name" placeholder="Nombre" data-rule="minlen:4" data-msg="Digite mas de 3 letras " />
+            <div class="validate"></div>
+          </div>
+          <div class="col-md-6 form-group">
+            <input type="email" class="form-control" name="email" id="email" placeholder="Email" data-rule="email" data-msg="Ingrese un email válido" />
+            <div class="validate"></div>
+          </div>
+        </div>
+        <div class="form-group">
+          <input type="text" class="form-control" name="subject" id="subject" placeholder="Tema" data-rule="minlen:4" data-msg="Favor escribir mas de 5 letras" />
+          <div class="validate"></div>
+        </div>
+        <div class="form-group">
+          <textarea class="form-control" name="message" rows="5" data-rule="required" data-msg="Escribe cualquier cosa" placeholder="Mensaje"></textarea>
+          <div class="validate"></div>
+        </div>
+        <div class="mb-3">
+          <div class="loading">Cargando</div>
+          <div class="error-message"></div>
+          <div class="sent-message">Tu mensaje ha sido enviado! Gracias!</div>
+        </div>
+        <div class="text-center"><button type="submit">Mandar mensaje!</button></div>
+      </form>
+
+    </div>
+  </section><!-- Final Contacto  -->
+
+  <!-- Vendor JS Files -->
+  <script src="assets/vendor/jquery/jquery.min.js"></script>
+  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="assets/vendor/jquery.easing/jquery.easing.min.js"></script>
+  <script src="assets/vendor/php-email-form/validate.js"></script>
+  <script src="assets/vendor/waypoints/jquery.waypoints.min.js"></script>
+  <script src="assets/vendor/counterup/counterup.min.js"></script>
+  <script src="assets/vendor/owl.carousel/owl.carousel.min.js"></script>
+  <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+  <script src="assets/vendor/venobox/venobox.min.js"></script>
+
+  <!--JS File -->
+  <script src="assets/js/main.js"></script>
+
+    <div class="background-container">
+
+        <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/1231630/moon2.png" alt="">
+
+      <div class="stars"></div>
+      <div class="twinkling"></div>
+        <div class="clouds"></div>
+  
+</body>
+
 </html>
