--- a/index.html
+++ b/index.html
@@ -78,11 +78,11 @@
             Técnico en Ingeniería de Sistemas Informáticos y cursando el 5to. año en Ingeniería en Desarrollo de Software. Programador Analista para Sistema SIDCO en Productos Alimenticios DIANA. Me apasiona la tecnología, ser autodidacta, y tengo mucha disposición de aprender cosas nuevas cada día.</p>
             <p>
                <ul>
-                <li><i class="icofont-code"></i>HTML - CSS - JAVASCRIPT - PHP </li>
-                <li><i class="icofont-code"></i>JAVA EE - JSP - SERVLETS - HIBERNATE</li> 
+                <li><i class="icofont-code"></i>HTML - CSS- BOOTSTRAP - JS - PHP </li>
+                <li><i class="icofont-code"></i>JAVA WEB - JSP - SERVLETS - HIBERNATE</li> 
                 <li><i class="icofont-code"></i>C# - ASP.NET - ENTITY FRAMEWORK </li>
-                <li><i class="icofont-code"></i>REACT JS - BOOTSTRAP </li> 
-                <li><i class="icofont-code"></i> MSSQL SERVER - MYSQL</li>
+                <li><i class="icofont-code"></i>REACT JS </li> 
+                <li><i class="icofont-code"></i> SQL SERVER - MYSQL</li>
                 <li><i class="icofont-code"></i> SCRUM - GIT</li>
                 <li><i class="icofont-code"></i> </li> 
               </ul>
@@ -118,6 +118,9 @@
       <div class="section-title">
         <h2>Curriculum Vitae</h2>
         <p>C. V.</p>
+      </div>
+      <div class="section-title2">
+        <a download="CV_SAENZ" href="../assets/C.V.SaenzQ.pdf">Curriculum Vitae</a>
       </div>
 
       <div class="row">
@@ -373,12 +376,13 @@
   <script src="assets/js/main.js"></script>
 
     <div class="background-container">
+
         <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/1231630/moon2.png" alt="">
-    
+
       <div class="stars"></div>
       <div class="twinkling"></div>
         <div class="clouds"></div>
-    </div>
+  
 </body>
 
 </html>
