--- a/index.html
+++ b/index.html
@@ -117,11 +117,9 @@
 
       <div class="section-title">
         <h2>Curriculum Vitae</h2>
-        <p>C. V.</p>
+        <a download="CV_SAENZ" href="../assets/C.V.SaenzQ.pdf">Descargar en PDF</a>
       </div>
-      <div class="section-title2">
-        <a download="CV_SAENZ" href="../assets/C.V.SaenzQ.pdf">Curriculum Vitae</a>
-      </div>
+
 
       <div class="row">
         <div class="col-lg-6">
