--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 
       <div class="section-title">
         <h2>Curriculum Vitae</h2>
-        <button type="button" download="CV_SAENZ" href="../assets/C.V.SaenzQ.pdf">Descargar en PDF</button>
+        <button type="button" download="CVSaenz2022" href="../assets/CVSaenz2022.pdf">Descargar en PDF</button>
       </div>
 
 
