--- a/index.html
+++ b/index.html
@@ -117,9 +117,11 @@
 
       <div class="section-title">
         <h2>Curriculum Vitae</h2>
-        <button type="button" download="CVSaenz2022" href="../assets/CVSaenz2022.pdf">Descargar en PDF</button>
+        <a class="btn" href="assets/CVSaenz2022.pdf" download="cvSaenz2022">Descargar en PDF</a>
       </div>
-
+      <div class="section-title2">
+        
+      </div>
 
       <div class="row">
         <div class="col-lg-6">
