--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 
       <div class="section-title">
         <h2>Curriculum Vitae</h2>
-        <a class="btn" href="assets/CVSaenz2022.pdf" download="cvSaenz2022">Descargar en PDF</a>
+        <a class="btn" href="assets/CVSaenz2022.pdf" download="cvSaenz2022">Descargar PDF Aquí! <i class="icofont-download"></i></a>
       </div>
 
 
